[project]
name = "llm-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "hf-xet>=1.0.2",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]
